--- a/src/app/shared/question/question.component.scss
+++ b/src/app/shared/question/question.component.scss
@@ -19,7 +19,7 @@ $button-height: 86px;
 
   .buttons {
     position: absolute;
-    bottom: 10px;
+    bottom: 40px;
     display: flex;
     left: 50%;
     margin-left: -$button-width / 2;
